# LD46-TheHum

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain  vimrc
.github/workflows/: build-release.yml
.vim/: coc-settings.json
docs/: LEVEL-CREATION.md  README.md
resources/config/: display.ron  frame_limiter.ron  ingame_bindings.ron  menu_bindings.ron
resources/levels/: dev.json  dev2.json  level.json  main_menu.json  menu.json
resources/settings/: beartrap.ron  bonfire.ron  camera.ron  general.ron  player.ron  radio.ron  songs.ron  sounds.ron  tiles.ron  wood.ron  wood_spawner.ron
resources/spritesheets/: beartrap.ron  bonfire.ron  bonfire_halo.ron  player.aseprite  player.ron  radio.ron  wood.ron  wood_indicator.ron
resources/ui/: game_over.ron  load_ingame.ron  main_menu.ron
src/: main.rs
src/components/: beartrap.rs  bonfire.rs  flame.rs  ladder.rs  mod.rs  movable.rs  player.rs  radio.rs  trigger_reactive_animation.rs  wood_indicator.rs  wood_inventory.rs  wood_spawner.rs
src/entities/: beartrap.rs  bonfire.rs  camera.rs  halo.rs  ladder.rs  mod.rs  player.rs  radio.rs  wood.rs  wood_spawner.rs
src/init/: init_game_data.rs  mod.rs
src/input/: ingame_bindings.rs  menu_bindings.rs  mod.rs
src/level_loader/: level_data.rs  load_objects.rs  load_tiles.rs  mod.rs
src/resources/: animation_key.rs  collision_tag.rs  dispatcher_id.rs  mod.rs  song_key.rs  sound_key.rs  wood_spawner_manager.rs
src/settings/: beartrap_settings.rs  bonfire_settings.rs  camera_settings.rs  general_settings.rs  mod.rs  player_settings.rs  radio_settings.rs  songs_settings.rs  sounds_settings.rs  tiles_settings.rs  wood_settings.rs  wood_spawner_settings.rs
src/states/: game_over.rs  ingame.rs  mod.rs  (+3 more)
tiled/: export-script.js
(+43 files in other folders)
