[package]
name = "ld46"
version = "1.0.2"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7.3"
ron = "0.5.1"
serde_json = "1.0.51"

[dependencies.deathframe]
version = "*"
# path = "../deathframe"
git = "https://github.com/Noah2610/deathframe"
branch = "develop-ld46"
features = [
    "animation",
    "audio",
    "physics",
    "vulkan",
]

[dependencies.climer]
version =  "0.6.0"
default-features = false
features = ["serialize"]

[dependencies.serde]
version = "1.0.104"
features = ["derive"]

[features]
default = []
debug = ["deathframe/debug"]

[profile.dev]
opt-level        = 2
debug            = true
debug-assertions = true
codegen-units    = 8
incremental      = true
overflow-checks  = true

[profile.release]
opt-level        = 3
debug            = false
debug-assertions = false
codegen-units    = 1
incremental      = true
overflow-checks  = false
